# esmBot

./: .clang-format  .dockerignore  .env.example  .env.example.docker  .envrc  .eslintrc.json  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierignore  404.html  CLAUDE.md  CMakeLists.txt  CNAME  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.bot  Jumpscare  LICENSE  PRIVACY.md  README.md  app.js  application.yml  binding.gyp  biome.json  compose.yml  config-example.json  convertdb.js  data.sqlite-journal  deno.json  docker-compose.yml  ecosystem.config.cjs  eslint.config.js  flake.nix  index.html  lavanodes.json  messages.json  migratetweets.js  (+12 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  error-report.md  error-report.yml  feature_request.yml
.github/workflows/: build.yml  codeql-analysis.yml  deploy.yml  docker-commit.yml  docker-release.yml  docker.yml  docs.yml  mirror.yml  mkdocs.yml
api/: IMPLEMENTATION.md  index.js  job.js
assets/audio/: boat.opus  boi.opus  bruh.opus  bus.opus  explosion.opus  fart.opus  fbi.opus  fortnite.opus  gethelp.opus  johnwick.opus  macandcheese.opus  mail.opus  oof.opus  ping.opus  prunejuice.opus  upermario.opus
assets/captions/: skuub-captions.txt
assets/fonts/: fontconfig.xml
assets/pages/: help.pug
bun/: index.html
classes/: command.js  imageCommand.js  musicCommand.js  soundCommand.js  soundboardCommand.js
commands/: 8ball.js  9gag.js  addtweet.js  avatar.js  ban.js  bandicam.js  bird.js  blur.js  blurple.js  boat.js  boi.js  boom.js  brazzers.js  bruh.js  bus.js  caption.js  caption2.js  cat.js  catfact.js  channel.js  circle.js  count.js  cowsay.js  crop.js  dbl.js  decode.js  deviantart.js  dice.js  dog.js  dogfact.js  donate.js  emote.js  encode.js  eval.js  exec.js  explode.js  explosion.js  fakeping.js  fart.js  fbi.js  (+86 more)
commands/fun/: 8ball.js  addtoskuub.js  ancient.js  ask.js  bear.js  bird.js  bismillah.js  captionidea.js  cat.js  cowsay.js  dice.js  dog.js  duck.js  fish.js  friend.js  fullwidth.js  getskuub.js  halalcheck.js  homebrew.js  horse.js  lion.js  lunch.js  lunchtime.js  mc.js  penguin.js  quran.js  retro.js  rps.js  skuub.js  skuubcount.js  skuubdetector.js  sonic.js  turtle.js  whale.js  wikihow.js  xkcd.js
commands/general/: avatar.js  banner.js  base64.js  broadcast.js  captionchance.js  channel.js  clearoverridecaption.js  command.js  count.js  dbl.js  decode.js  donate.js  emote.js  encode.js  eval.js  evalraw.js  exec.js  faceit.js  feedback.js  gif.js  help.js  image.js  imagereload.js  imagestats.js  info.js  invite.js  lengthen.js  mediareload.js  mediastats.js  overridecaption.js  ping.js  prefix.js  qr.js  qrcreate.js  qrread.js  raw.js  reload.js  restart.js  screenshot.js  serverinfo.js  (+7 more)
commands/image-editing/: 9gag.js  avs4you.js  bandicam.js  blur.js  blurple.js  bounce.js  caption.js  caption2.js  circle.js  crop.js  deepfry.js  deviantart.js  explode.js  fade.js  flag.js  flip.js  flop.js  freeze.js  funky.js  gamexplain.js  gif.js  globe.js  grayscale.js  haah.js  hexagon.js  hooh.js  hue.js  hypercam.js  ifunny.js  implode.js  invert.js  jpeg.js  kinemaster.js  leak.js  magik.js  meme.js  memecenter.js  motivate.js  nerd.js  petpet.js  (+36 more)
commands/message/: add-to-skuub.js  select-image.js
commands/music/: forceskip.js  host.js  loop.js  music.js  nowplaying.js  pause.js  play.js  queue.js  remove.js  seek.js  shuffle.js  skip.js  stop.js  toggle.js  volume.js
commands/soundboard/: boi.js  boom.js  bruh.js  damndaniel.js  explosion.js  fakeping.js  fart.js  fartreverb.js  fbi.js  mail.js  oof.js  remotesound.js  soundboard.js  winxp.js
commands/tags/: tags.js
config/: commands.json  index.html  messages.json  servers.json
containers/: index.html
custom-commands/: index.html
docker/: index.html
docs/: bun.md  config.md  containers.md  custom-commands.md  docker.md  index.md  postgresql.md  requirements.txt  runtimes.md  setup.md
events/: debug.js  error.js  guildCreate.js  guildDelete.js  interactionCreate.js  messageCreate.js  rawWS.js  ready.js  shardReady.js  voiceChannelLeave.js  voiceChannelSwitch.js  warn.js
locales/: cs.json  da.json  de.json  en-US.json  es-419.json  es-ES.json  fi.json  fr.json  hu.json  id.json  it.json  ko.json  lt.json  nl.json  pl.json  pt-BR.json  ro.json  ru.json  th.json  tr.json  uk.json  vi.json
natives/: 9gag.cc  9gag.h  bandicam.cc  bandicam.h  blur.cc  blur.h  blurple.cc  blurple.h  bounce.cc  bounce.h  caption.cc  caption.h  caption2.cc  caption2.h  circle.cc  circle.h  colors.cc  colors.h  commands.h  common.cc  common.h  crop.cc  crop.h  deepfry.cc  deepfry.h  deviantart.cc  deviantart.h  distort.cc  distort.h  explode.cc  explode.h  fade.cc  flag.cc  flag.h  flip.cc  flip.h  flop.cc  flop.h  freeze.cc  freeze.h  (+72 more)
natives/cli/: cli.cc  image.cc
natives/common/: argmap.h  maps.h  riff.cc  riff.h
natives/generic/: image.cc  image.h  media.cc  media.h
natives/image/: blur.cc  bounce.cc  caption.cc  caption2.cc  circle.cc  colors.cc  commands.h  common.cc  common.h  crop.cc  deepfry.cc  distort.cc  fade.cc  flag.cc  flip.cc  freeze.cc  gamexplain.cc  globe.cc  homebrew.cc  invert.cc  jpeg.cc  magik.cc  meme.cc  mirror.cc  motivate.cc  petpet.cc  qr.cc  reddit.cc  resize.cc  reverse.cc  scott.cc  slide.cc  snapchat.cc  sonic.cc  speed.cc  spin.cc  spotify.cc  squish.cc  swirl.cc  tile.cc  (+6 more)
natives/node/: image.cc  media.cc  worker.cc  worker.h
natives/node_async/: image.cc  worker.cc  worker.h
patches/: bun-types.patch  pm2.patch
postgresql/: index.html
runtimes/: index.html
setup/: index.html
src/: app.js  app.ts  database.js  database.ts
src/api/: IMPLEMENTATION.md  (+1 more)
utils/: awaitrejoin.js  client.js  collections.js  convertdb.js  convertpg.js  converttags.js  database.js  dbl.js  gmbuffer.js  handler.js  help.js  i18n.js  image-command.js  image-runner.js  image.js  imageConnection.js  imageLib.js  imagedetect.js  logger.js  meme.sh  misc.js  parseCommand.js  psqlinit.sh  soundplayer.js  tempimages.js  twitter.js  uploader.js  urlcheck.js  wrap.js
(+138 files in other folders)
